# dispatch

./: .gitignore  CHANGELOG.md  HUB_AND_SPOKE.md  LICENSE  README.md  SHIP_NOW.md  dispatcher.py  drain_queue.py  fanout.py  hub.py  pyproject.toml  queue_manager.py  run.sh  speak.sh  supercharge.py  watchpane.py
.github/workflows/: ci.yml  release.yml
packaging/homebrew/: dispatch.rb
src/dispatch/: __init__.py  __main__.py  cli.py
src/dispatch/commands/: __init__.py  exec_cmd.py  init_cmd.py  log_cmd.py  repl.py  routes.py  status.py  version.py
src/dispatch/config/: __init__.py
src/dispatch/core/: __init__.py  classify.py  enrich.py  supercharge.py
src/dispatch/io/: __init__.py  inbox.py  log.py  paths.py
src/dispatch/routes/: __init__.py  routes.json
tests/: conftest.py  test_classify.py  test_cli.py  test_inbox.py  test_init_cmd.py  test_log.py  test_paths.py  test_repl.py  test_supercharge.py
