[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "dispatch-cli"
version = "0.1.1"
description = "Hub-and-spoke AI dispatcher — classify short messages, supercharge to agent-ready prompts, fan out to inboxes."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Shift The Culture LLC", email = "info@shifttheculture.media" },
]
keywords = ["ai", "cli", "dispatcher", "hub-and-spoke", "agents"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
dependencies = [
    "typer>=0.12",
    "rich>=13",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
]

[project.urls]
Homepage = "https://shifttheculture.media"
Issues = "https://shifttheculture.media"

[project.scripts]
dispatch = "dispatch.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/dispatch"]

[tool.hatch.build.targets.wheel.force-include]
"src/dispatch/routes/routes.json" = "dispatch/routes/routes.json"

[tool.hatch.build.targets.sdist]
include = [
    "src/dispatch",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: unit tests",
    "integration: integration tests",
]

[tool.coverage.run]
source = ["src/dispatch"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
